# parsec

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-full.yml  ci.yml  docs.yml  release.yml
.gsd/: DECISIONS.md  PROJECT.md  QUEUE.md  REQUIREMENTS.md  STATE.md  completed-units.json
.gsd/milestones/M001/: M001-CONTEXT.md  M001-ROADMAP.md  (+1 more)
backend/: build_sidecar.py  build_sidecar.sh  parsec-sidecar.spec  pyproject.toml  requirements.txt
backend/parsec/: __init__.py  engine.py  languages.py  models.py  paddle_engine.py  pipeline.py  sidecar.py  sidecar_entry.py
backend/parsec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_engine.py  test_integration.py  test_languages.py  test_pipeline.py  test_pipeline_pdf.py  test_quality.py  test_sidecar.py  test_sidecar_language.py
backend/tests/fixtures/: clean_02.gt.txt  clean_03.gt.txt  degraded_01.gt.txt  degraded_02.gt.txt  generate_fixtures.py  multicol_01.gt.txt  multicol_02.gt.txt  pdf_skewed_01.gt.txt  tiff_01.tiff
docs/: index.md
docs/.vitepress/: config.ts
docs/guide/: architecture.md  contributing.md  faq.md  getting-started.md  usage.md
src/: main.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: parsec-sidecar-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs
(+92 files in other folders)
